Add body to post affiliation
